# vc-rag-service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: exceptions.py  main.py
app/api/routes/health/: app_info_response.py  health_routes.py
app/api/routes/ingestimage/: ingest_image_models.py  ingest_image_routes.py
app/core/: config.py  database.py  dependencies.py
app/jobs/: vectorize_job.py
app/model/: app_info.py
app/repository/: entities.py  image_index_repository.py  recognition_candidate_repository.py  recognition_state_repository.py  similarity_match_repository.py
app/service/: app_info_service.py  embedding_service.py  image_ingest_service.py  vectorization_service.py
notices/: vc-rag-service-report (1).md
