[project]
name = "git init"
version = "0.1.0"
description = "Vehicle image embedding microservice"
requires-python = ">=3.12"

dependencies = [
    # Framework webowy — odpowiednik Spring Web + @RestController
    "fastapi[standard]>=0.115.0",
    # Serwer ASGI — odpowiednik embedded Tomcat w Spring Boot
    "uvicorn[standard]>=0.30.0",
    # Konfiguracja z .env — odpowiednik application.yml / @ConfigurationProperties
    "pydantic-settings>=2.0.0",
    # walidacja danych, DTOsy, odpowiednik Bean Validation
    "pydantic>=2.0.0",
    # biblioteka do manipulowania obrazami jpg/png odpowiednik ImageIO / BufferedImage z Javy. Uzyta bedzie do wczytania miniaturki 640px przed przekazaniem do CLIP:
    "Pillow>=10.0.0",
    # sql data base orm, something like hibernate
    "sqlalchemy>=2.0.0",
    #
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
# Uruchamianie: pip install -e ".[dev]" to instaluje lokalnie na kompie na serwerze nie potrzebne. Tylko prod -> pip install -e
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0", # klient HTTP do testów FastAPI
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"